--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,22 +1,33 @@
-django-cms>=3.5,<3.6
-djangocms-admin-style>=1.2,<1.3
-django-treebeard>=4.0,<5.0
-
-djangocms-text-ckeditor>=3.6.1
-djangocms-link>=2.1
-djangocms-style>=2.0
-djangocms-googlemap>=1.1
-djangocms-snippet>=2.0
-djangocms-video>=2.0
-djangocms-column>=1.7
-djangocms-file>=2.0,<3.0
-djangocms-picture>=2.0,<3.0
-easy_thumbnails
-django-filer>=1.3
-Django<2.0
-pytz
-django-classy-tags>=0.7
-html5lib>=1.0.1
-Pillow>=3.0
-django-sekizai>=0.9
-six
+dj-database-url==0.5.0
+Django==1.11.16
+django-classy-tags==0.8.0
+django-cms==3.5.3
+django-filer==1.4.0
+django-formtools==2.1
+django-js-asset==1.1.0
+django-mptt==0.9.1
+django-polymorphic==2.0.3
+django-sekizai==0.10.0
+django-treebeard==4.3
+djangocms-admin-style==1.2.9
+djangocms-attributes-field==0.4.0
+djangocms-column==1.9.0
+djangocms-file==2.1.0
+djangocms-googlemap==1.2.0
+djangocms-installer==1.0.2
+djangocms-link==2.2.1
+djangocms-picture==2.1.1
+djangocms-snippet==2.1.0
+djangocms-style==2.1.0
+djangocms-text-ckeditor==3.6.1
+djangocms-video==2.1.0
+easy-thumbnails==2.5
+gunicorn==19.5.0
+html5lib==1.0.1
+Pillow==5.3.0
+psycopg2-binary==2.7.6.1
+pytz==2018.7
+six==1.11.0
+tzlocal==1.5.1
+Unidecode==1.0.23
+webencodings==0.5.1
